test prefox added.

--- a/susu/CMakeLists.txt
+++ b/susu/CMakeLists.txt
@@ -20,7 +20,7 @@ CXXTEST_ADD_TEST( testSubject cxxtest_subject.cpp ${CMAKE_CURRENT_SOURCE_DIR}/te
 CXXTEST_ADD_TEST( testObserverPattern cxxtest_.cpp ${CMAKE_CURRENT_SOURCE_DIR}/test/TestObserverPattern.hpp )
 #CXXTEST_ADD_TEST( singletonCallOnce cxxtest_singleton_call_once.cpp ${CMAKE_CURRENT_SOURCE_DIR}/test/TestSingleton.hpp )
 CXXTEST_ADD_TEST( singletonCallOnceBoost cxxtest_singleton_call_once_boost.cpp ${CMAKE_CURRENT_SOURCE_DIR}/test/TestSingletonBoost.hpp )
-CXXTEST_ADD_TEST( decorator cxxtest_decorator.cpp ${CMAKE_CURRENT_SOURCE_DIR}/test/TestDecorator.hpp )
+CXXTEST_ADD_TEST( testDecorator cxxtest_decorator.cpp ${CMAKE_CURRENT_SOURCE_DIR}/test/TestDecorator.hpp )
 
 #CXXTEST_ADD_TEST( observerPattern cxxtest_osberverPattern.cpp ${CMAKE_CURRENT_SOURCE_DIR}/test/TestObserverPattern.hpp )
 
@@ -33,4 +33,4 @@ target_link_libraries( testSubject ${Boost_LIBRARIES} observer )
 target_link_libraries( testObserverPattern ${Boost_LIBRARIES} observer )
 # singletonCallOnce: template stuff, linking not needed
 target_link_libraries( singletonCallOnceBoost ${Boost_LIBRARIES})
-target_link_libraries( decorator printerDecorator ) 
+target_link_libraries( testDecorator printerDecorator ) 
